# ubuntu-azure-proposed

./: .gitignore  README.md  setup.cfg  tox.ini
scripts/: create_vm.sh
ubuntu_azure_proposed/: __init__.py
