[metadata]
name = ubuntu-azure-proposed
url = https://github.com/gjolly/ubuntu-azure-proposed
author = Gauthier Jolly
author_email = contact@gauthierjolly.com
license = Apache-2.0
long-description = README.md
classifiers =
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
package_dir=
  =.
packages = find:
install_requires =
  requests
  prettytable
setup_requires =
  setuptools_scm

[options.extras_require]
tests =
  flake8
  black
  isort

[options.entry_points]
console_scripts =
  ubuntu-azure-proposed = ubuntu_azure_proposed:main
